# esp32-lvgl-uart-ui

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_events.c  ui_events.h  ui_font_English.c  ui_font_Thai.c  ui_img_off_png.c  ui_img_on_png.c  ui_img_speaker_png.c
main/: CMakeLists.txt  CrowPanel_ESP32_7.0.cpp  touch.h
