idf_component_register(SRCS "ui_font_English.c" "ui_Screen2.c" "ui_comp_hook.c" "ui_font_Chinese.c" "ui_font_Thai.c"
            "ui.c"
            "ui_Screen1.c"        
            "ui_helpers.c"
            "ui_font_Chinese.c"
            "ui_font_Thai.c"
            "ui_font_English.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES lvgl-3)
